TAG: qcreports_db-6-0-16-13
DATE: 01/26/2026
STAFF: dbm
1) MRK_GOUnknown.py: Exclude references tagged with GO:QC1_GOunknown_exclude
2) MRK_NoGO.py: Exclude references tagged with GO:QC4_NoGO_exclude
3) MRK_GOIEA.py: Exclude references tagged with GO:QC5_IEA-only_exclude

TAG: qcreports_db-6-0-16-12
DATE: 10/23/2020
STAFF: dbm
python3 fix: mgd/GO_InvalidInferredFrom.py, mgd/MRK_GOIEA.py

TAG: qcreports_db-6-0-16-11
DATE: 10/14/2020
STAFF: sc
but fix: mgd/GXD_ImagePanes.py

TAG: qcreports_db-6-0-16-10
DATE: 09/23/2020
STAFF: lec
TR13327/AP group weekly reference QC reports/WF_AP_Tags.py

TAG: qcreports_db-6-0-16-9
DATE: 09/09/2020
STAFF: sc
TR13374 - New MRK_C4AM.rpt

TAG: qcreports_db-6-0-16-8
DATE: 09/04/2020
STAFF: lec
TR13327/AP group weekly reference QC reports/WF_AP_Tags.py

TAG: qcreports_db-6-0-16-7
DATE: 09/04/2020
STAFF: lec
TR13277/change short citation to longer citation on journal QC reports
TR13356/re-label and re-sort GO QC reports
TR13357/removal of GO QC report  (mgd/MGI_GenotypeDescriptions.py)

TAG: qcreports_db-6-0-16-6
DATE: 09/04/2020
STAFF: lec
TR13186/add auto copyright for Cell Rep
TR13363/add J# to list of GXD electronic references

TAG: qcreports_db-6-0-16-5
DATE: 08/27/2020
STAFF: sc
TR13204/Infrastructure Release
pirsfloadRpt.csh calls python report scripts, but was not updated to use ${PYTHON}

TAG: qcreports_db-6-0-16-4
DATE: 08/26/2020
STAFF: lec
TR13204/Infrastructure Release
re-add http://wts.informatics.jax.org/wts_projects/11100/11105/GXD_EarlyEmbPapers.py

TAG: qcreports_db-6-0-16-3
DATE: 08/25/2020
STAFF: lec
mgd/GO_InvalidInferredFrom.py : check if inferredFrom = None

TAG: qcreports_db-6-0-16-2
DATE: 08/24/2020
STAFF: lec
TR13369/QC report of COV: tagged papers/weekly/BIB_Covid.py

TAG: qcreports_db-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: qcreports_db-6-0-15-9
DATE: 07/10/2020
STAFF: dbm
CHANGES:TR13348 - Move GXD_References.sql from weekly to daily

TAG: qcreports_db-6-0-15-8